--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -8,16 +8,15 @@
 
 工作原理：
 
-> 1. **初始化**：算法从数组的第二个元素开始，将其视为已排序部分。初始时，第一个元素可以视为已排序部分，因为单个元素被认为是已排序的。
->
-> 2. **遍历未排序部分**：从数组的第二个元素（下标为1）开始，依次遍历未排序的元素。将当前元素视为要插入已排序部分的元素。
->
-> 3. **插入操作**：将当前元素与已排序部分的元素依次比较。如果当前元素小于已排序部分的元素，就将已排序部分的元素向后移动一个位置，为当前元素腾出插入的位置。这个过程会一直持续，直到找到当前元素的正确位置或已经将所有大于当前元素的元素都向后移动了。
->
-> 4. **插入当前元素**：一旦找到了当前元素的正确位置，就将当前元素插入到已排序部分的合适位置。
->
-> 5. **重复步骤 2~4**：然后继续遍历下一个未排序元素，并重复上述插入操作，直到遍历完所有未排序元素。在这个过程中，已排序部分逐渐增长，未排序部分逐渐减小，直到整个数组有序。
->
+1. **初始化**：算法从数组的第二个元素开始，将其视为已排序部分。初始时，第一个元素可以视为已排序部分，因为单个元素被认为是已排序的。
+
+2. **遍历未排序部分**：从数组的第二个元素（下标为1）开始，依次遍历未排序的元素。将当前元素视为要插入已排序部分的元素。
+
+3. **插入操作**：将当前元素与已排序部分的元素依次比较。如果当前元素小于已排序部分的元素，就将已排序部分的元素向后移动一个位置，为当前元素腾出插入的位置。这个过程会一直持续，直到找到当前元素的正确位置或已经将所有大于当前元素的元素都向后移动了。
+
+4. **插入当前元素**：一旦找到了当前元素的正确位置，就将当前元素插入到已排序部分的合适位置。
+
+5. **重复步骤 2~4**：然后继续遍历下一个未排序元素，并重复上述插入操作，直到遍历完所有未排序元素。在这个过程中，已排序部分逐渐增长，未排序部分逐渐减小，直到整个数组有序。
 
 **算法的关键是在已排序部分内不断地向右移动元素以为新元素腾出插入的位置，然后将新元素插入到正确的位置。**
 
@@ -87,21 +86,24 @@ void insertionSort(int arr[], int size) {
 #### **`TCP/IP`模型**
 
 1. #### **网络接口层（Network Interface Layer）**：
-   
+
    - 也称为链路层（Link Layer）。
    - 主要处理物理网络介质和数据链路的细节。
    - 包括硬件设备驱动、数据帧的构建和解析，以及MAC地址分配等功能。
-   
+
 2. **网络层（Internet Layer）**：
+
    - 主要职责是提供数据包的路由和转发，实现不同网络之间的通信。
    - 使用路由器等设备来确定数据包的最佳路径。
    - 核心协议是IPv4和IPv6，用于标识主机和路由器的地址。
 
 3. **传输层（Transport Layer）**：
+
    - 与OSI模型中的传输层相似，负责端到端的数据传输。
    - 主要协议包括TCP和UDP，用于确保可靠的数据传输和错误检测。
 
 4. **应用层（Application Layer）**：
+
    - 与OSI模型中的应用层类似，包括各种网络应用程序和服务。
    - 包括HTTP、SMTP、FTP、DNS等协议，用于实现各种网络应用。
 
@@ -121,7 +123,46 @@ void insertionSort(int arr[], int size) {
 
 #### 信道
 
-# `CS：APP`
+## `CS：APP`
 
 
 
+# 2023/10/06
+
+## 数据结构
+
+### `topK`问题模拟实现
+
+### 堆排序
+
+## C++
+
+### `list`官方文档接口
+
+### `list`初步模拟实现
+
+## 计算机网络
+
+### **可靠传输协议**
+
+- 停止-等待协议
+- 回退N帧协议
+- 选择重传协议
+
+### 点对点协议`PPP`
+
+## English
+
+### 四级单词`list2`
+
+### 六级单词`list2`
+
+## `Efective C++`
+
+### 条款1
+
+> 视C++为一个与语言联邦
+
+### 条款2
+
+> 尽量使用`const`, `enum`, `inline`替换 `#define`
