--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -166,3 +166,46 @@ void insertionSort(int arr[], int size) {
 ### 条款2
 
 > 尽量使用`const`, `enum`, `inline`替换 `#define`
+
+# 2023/10/07
+
+## English
+
+### 四级单词`list3`
+
+### 六级单词`list3`
+
+## C++
+
+### `list`模拟实现（常量迭代器）
+
+## 数据结构
+
+### 二叉树遍历
+
+#### 前序遍历
+
+#### 中序遍历
+
+#### 后序遍历
+
+#### 节点个数
+
+#### 叶节点个数
+
+#### 树高度
+
+### Linux
+
+### 进程地址空间
+
+## `C++Primer`
+
+### 第三章
+
+#### `string`
+
+#### `vector`
+
+#### 数组
+
