--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -209,3 +209,45 @@ void insertionSort(int arr[], int size) {
 
 #### 数组
 
+# 2023/10/08
+
+## English
+
+### 四级单词`list4`
+
+### 六级单词`list4`
+
+## C++
+
+### `list`模拟实现完结
+
+## `C++Primer`
+
+### 第四章-表达式
+
+## 线性代数
+
+### 行列式
+
+#### 行列式按行展开
+
+#### 拉普拉斯定理
+
+#### 异乘变零定理
+
+#### 行列式相乘
+
+## Linux
+
+### 进程控制
+
+#### 进程退出场景
+
+#### 进程退出方式
+
+### 进程等待
+
+#### 进程等待概念
+
+#### 进程等待方法
+
