--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -251,3 +251,37 @@ void insertionSort(int arr[], int size) {
 
 #### 进程等待方法
 
+# 2023/10/09
+
+## English
+
+### 四级单词`list5`
+
+### 六级单词`list5`
+
+## `C++Primer`
+
+### 第五章-语句
+
+## Linux
+
+### 进程控制
+
+### 微型`shell`
+
+## 线性代数
+
+### 二阶三阶行列式
+
+### n阶行列式
+
+### 行列式的性质
+
+## 离散数学
+
+### 命题逻辑基本概念
+
+### 命题公式及分类
+
+### 命题逻辑的等值演算
+
