--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -1,4 +1,4 @@
-# 2023/10/4
+# 2023/10/04
 
 ## 排序算法
 
@@ -288,3 +288,58 @@ void insertionSort(int arr[], int size) {
 ## `EfectiveC++`
 
 ### 条款4
+
+# 2023/10/10
+
+## English
+
+### 四级单词`list6`
+
+### 六级单词`list6`
+
+## C++Primer
+
+### 第六章-函数
+
+## Linux
+
+### 环境变量温习
+
+### 进程控制温习
+
+### 进程替换温习
+
+## C++
+
+### 温习
+
+#### C++关键字
+
+#### 命名空间
+
+#### 输入输出
+
+#### 缺省参数
+
+#### 函数重载
+
+#### 引用
+
+#### 内联函数
+
+#### `auto`
+
+#### 范围`for`循环
+
+#### `nullptr`
+
+## 线性代数
+
+### 行列式按行展开
+
+### 异乘变零定理
+
+### 拉普拉斯定理
+
+### 行列式相乘
+
