--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -343,3 +343,54 @@ void insertionSort(int arr[], int size) {
 
 ### 行列式相乘
 
+# 2023/10/11
+
+## English
+
+### 四级单词`list7`
+
+### 六级单词`list7`
+
+## 线性代数
+
+#### 行列式计算
+
+#### 上三角
+
+#### 按行展开
+
+#### 范德蒙德行列式
+
+#### 对称行列式
+
+#### 反对称行列式
+
+#### 克莱姆法则
+
+## Linux
+
+### 基础`IO`
+
+#### 温习C文件接口
+
+##### 系统文件`IO`接口
+
+###### `open`
+
+###### `close`
+
+###### `write`
+
+###### `read`
+
+#### 文件描述符`fd`
+
+##### 分配规则
+
+#### 重定向
+
+##### 微型shell增加重定向
+
+##### `dup2`系统调用
+
+#### Linux下一切皆文件
