--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -394,3 +394,36 @@ void insertionSort(int arr[], int size) {
 ##### `dup2`系统调用
 
 #### Linux下一切皆文件
+
+# 2023/10/12
+
+## English
+
+### 四级单词`list8`
+
+### 六级单词`list8`
+
+## 数据结构
+
+### 温习栈并实现`CPP`完善版本
+
+## 算法题
+
+### 二分查找
+
+#### 细节原理
+
+#### 循环条件
+
+#### 更新边界
+
+#### 力扣34
+
+#### 力扣20
+
+## 线性代数
+
+### 矩阵概念
+
+### 矩阵运算（一）
+
