--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -427,3 +427,14 @@ void insertionSort(int arr[], int size) {
 
 ### 矩阵运算（一）
 
+# 2023/10/13
+
+## English
+
+### 四级单词`list9`
+
+### 六级单词`list9`
+
+## 线性代数
+
+### 复习月考
