--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -438,3 +438,32 @@ void insertionSort(int arr[], int size) {
 ## 线性代数
 
 ### 复习月考
+
+# 2023/10/14
+
+## English
+
+### 四级单词`list10`
+
+### 六级单词`list10`
+
+## 线性代数
+
+### 复习考试
+
+## 算法题
+
+### `LeetCode150`
+
+### `LeetCode155`
+
+### `LeetCode231`
+
+### `牛客JZ31`
+
+## C++
+
+### 温习std::stack模拟实现
+
+### 温习std::queue模拟实现
+
