--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -467,3 +467,31 @@ void insertionSort(int arr[], int size) {
 
 ### 温习std::queue模拟实现
 
+# 2023/10/15
+
+## English
+
+### 复习四级单词`list1-2`
+
+### 复习六级单词`list1-2`
+
+## 线性代数
+
+### 考试习题
+
+## C++
+
+### 仿函数使用及原理
+
+### 适配器概念及使用
+
+### 优先级队列模拟实现
+
+### 反向迭代器
+
+## 算法题
+
+### `LeetCode225`
+
+### `LeetCode215`
+
