--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -513,3 +513,31 @@ void insertionSort(int arr[], int size) {
 
 ### 继承
 
+# 2023/10/17
+
+## English
+
+### 复习四级单词`list5-6`
+
+### 复习六级单词`list5-6`
+
+## C++
+
+### 继承深入理解
+
+### 继承对象模型
+
+### 菱形继承内存级理解
+
+## 线性代数
+
+### 考试习题
+
+## Linux
+
+### 复习进程笔记
+
+## 计算机网络
+
+### 数据链路层实验
+
