--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -541,3 +541,20 @@ void insertionSort(int arr[], int size) {
 
 ### 数据链路层实验
 
+# 2023/10/18
+
+## English
+
+### 复习四级单词`list7-8`
+
+### 复习六级单词`list7-8`
+
+## 线性代数
+
+### 考试习题
+
+## 数据结构
+
+### 堆 | 二叉树 - C
+
+### 堆排序 - C
