--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -558,3 +558,15 @@ void insertionSort(int arr[], int size) {
 ### 堆 | 二叉树 - C
 
 ### 堆排序 - C
+
+# 2023/10/19
+
+## English
+
+### 复习四级单词`list9-10`
+
+### 复习六级单词`list9-10`
+
+## 线性代数
+
+### 考试习题
