--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -570,3 +570,9 @@ void insertionSort(int arr[], int size) {
 ## 线性代数
 
 ### 考试习题
+
+# 2023/10/23
+
+近期由于电脑维修，导致并未提交，明日开始正常提交。
+
+考试也已经结束，可以正常学习后端路线。
