--- a/LearningRecord/学习记录.md
+++ b/LearningRecord/学习记录.md
@@ -576,3 +576,23 @@ void insertionSort(int arr[], int size) {
 近期由于电脑维修，导致并未提交，明日开始正常提交。
 
 考试也已经结束，可以正常学习后端路线。
+
+# 2023/10/24
+
+## English
+
+### 不背单词软件50
+
+## `DSA`
+
+### 第一章 引论
+
+### 第二章 算法分析
+
+### 第三章 表、栈和队列
+
+#### 书中链表完备实现（300行）
+
+## 计算机网络
+
+### 网络实验`Packet Tracer`
